--- a/webserver/public/css/main.css
+++ b/webserver/public/css/main.css
@@ -54,9 +54,26 @@ form div label, form div input {
     margin: 0 0 5px;
 }
 
+#generate {
+  margin: 0 auto;
+  cursor: pointer;
+  border: none;
+  background: #4CAF50;
+  color: #FFF;
+  margin: 0 0 5px;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-family: "Roboto";
+}
+
+#generate:hover {
+    background: #8aff8e;
+}
+
 .form-group-wrapper {
     padding: 5px;
-    
+    text-align: center;
 }
 
 h1 {
@@ -102,12 +119,14 @@ h2 {
 #test input[id="fname"]{
     height: 3%;
     padding: 10;
+    border-radius: 5px;
+    border: 1px solid #4CAF50;
 }
 #test input[id="stockList"] {
     width: 100%;
 }
 #test input[type="submit"] {
-cursor: pointer;
+  cursor: pointer;
   width: 100%;
   border: none;
   background: #4CAF50;
@@ -117,6 +136,11 @@ cursor: pointer;
   border-radius: 5px;
   font-size: 16px;
   font-family: "Roboto"
+}
+
+select {
+    border: 1px solid green;
+    border-radius: 5px;
 }
 
 #frmUploader input[type="submit"] {
